 * Removed VertexFunction class
 * Deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Added ResourceMap::GetType to access the type of a given key.

=== Python module ===

=== Miscellaneous ===
 * CMake >= 2.8.4 is required to build OpenTURNS
 * The format of openturns.conf has changed to make a distiction between types of keys

=== Bug fixes ===
 * #949 (LowDiscrepancyExperiment for distributions having dependent copula)
 * #952 (Limitation on distribution type for polynomial chaos?)
 * #953 (RandomMixture can fail with truncated distribution)
 * #954 (CompositeProcess::getFuture() broken)
 * #957 (RandomMixture::getDispersionIndicator() takes a long time)
 * #959 (The PolygonArray and Polygon classes poorly manage the colors)
 * #962 (The doc of MetaModelValidation.computePredictivityFactor is wrong)
 * #964 (Study does not load LogNormalMuSigma variables from XML)
 * #965 (A RandomVector from a RandomVector can make OT crash)
 * #968 (Empty legend make OT crash)

== 1.11 release (2018-05-11) == #release-1.11

=== Library ===

==== Major changes ====

==== New classes ====
 * FrechetFactory
 * Fehlberg
 * TranslationFunction
 * DomainComplement, DomainIntersection, DomainUnion, DomainDisjunctiveUnion, DomainDifference
 * SmoothedUniform
 * NearestNeighbourAlgorithm, RegularGridNearestNeighbour, NaiveNearestNeighbour, NearestNeighbour1D
 * EnclosingSimplex, EnclosingSimplexImplementation, NaiveEnclosingSimplex, RegularGridEnclosingSimplex, EnclosingSimplexMonotonic1D, BoundingVolumeHierarchy
 * IndicesCollection
 * SymbolicParserExprTk
 * EvaluationProxy
 * MemoizeFunction, MemoizeEvaluation
 * Evaluation, Gradient, Hessian
 * MeshDomain
 * NormInfEnumerateFunction
 * FunctionalChaosSobolIndices
 * P1LagrangeInterpolation
 * FilonQuadrature

==== API changes ====
 * Removed deprecated NumericalMathFunction class
 * Removed deprecated QuadraticNumericalMathFunction class
 * Removed deprecated LinearNumericalMathFunction class