@@ -508,6 +508,7 @@ ot_check_test (Distribution_arithmetic)
 if (R_base_FOUND)
 ot_check_test (Distribution_draw)
 endif ()
+ot_check_test (Distribution_quantile)
 ot_check_test (Event_std)
 ot_check_test (Event_domain)
 ot_check_test (RandomVector_constant)
