@@ -508,6 +508,7 @@ if (R_base_FOUND)
 ot_pyinstallcheck_test (Distribution_draw)
 endif ()
 ot_pyinstallcheck_test (Distribution_python)
+ot_pyinstallcheck_test (Distribution_quantile)
 ot_pyinstallcheck_test (Distribution_arithmetic)
 if (SCIPY_FOUND)
   ot_pyinstallcheck_test (Distribution_scipy)
