@@ -51,6 +51,7 @@
  * The format of openturns.conf has changed to make a distiction between types of keys
 
 === Bug fixes ===
+ * #915 (Distribution.computeQuantile properties)
  * #949 (LowDiscrepancyExperiment for distributions having dependent copula)
  * #952 (Limitation on distribution type for polynomial chaos?)
  * #953 (RandomMixture can fail with truncated distribution)
